# -AED-

./: README.md
Project1_FibonacciAirlines/: CMakeLists.txt
Project1_FibonacciAirlines/Aeroporto/: Aeroporto.cpp  Aeroporto.h
Project1_FibonacciAirlines/Aviao/: Aviao.cpp  Aviao.h
Project1_FibonacciAirlines/Bagagem/: Bagagem.cpp  Bagagem.h  TransporteBagagem.cpp  TransporteBagagem.h
Project1_FibonacciAirlines/Bilhete/: Bilhete.cpp  Bilhete.h
Project1_FibonacciAirlines/Cliente/: Cliente.cpp  Cliente.h
Project1_FibonacciAirlines/Data/: Data.cpp  Data.h
Project1_FibonacciAirlines/FibonacciAirlines/: FibonacciAirlines.cpp  FibonacciAirlines.h  Macros.h  main.cpp
Project1_FibonacciAirlines/Ficheiros/: Aeroportos.txt  Avioes.txt  Clientes.txt  LocaisTransporte.txt  Servicos.txt  Voos.txt
Project1_FibonacciAirlines/LocaisTransporte/: Horario.cpp  Horario.h  LocaisTransporte.cpp  LocaisTransporte.h
Project1_FibonacciAirlines/Menu/: Menu.cpp  Menu.h
Project1_FibonacciAirlines/Passageiro/: Passageiro.cpp  Passageiro.h
Project1_FibonacciAirlines/Servico/: Servico.cpp  Servico.h
Project1_FibonacciAirlines/Voo/: Voo.cpp  Voo.h
Project2_STCP/: STCPMap.cpp  STCPMap.h  main.cpp
Project2_STCP/Graph/: Graph.cpp  Graph.h  minHeap.h
Project2_STCP/Linha/: Linha.cpp  Linha.h
Project2_STCP/Menu/: Menu.cpp  Menu.h
Project2_STCP/Paragem/: Paragem.cpp  Paragem.h
